infrastructure/apps/music/prowlarr/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
    app.kubernetes.io/part-of: music
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: http
